# mllm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug_attention.py
include/: attention.h  backend.h  cpu_backend.h  cpu_tensor.h  debug_utils.h  embedding.h  gpt2_inference.h  gpt2_model.h  inference.h  layer.h  layernorm.h  linear.h  metal_backend.h  metal_tensor.h  metal_types.h  model.h  tensor.h  tokenizer.h  transformer_block.h
resources/: convert_gpt2_weights.py
src/: attention.mm  cpu_backend.mm  cpu_tensor.cpp  debug_utils.mm  embedding.mm  gpt2_inference.mm  gpt2_model.mm  inference.mm  layernorm.mm  linear.mm  main.cpp  metal_backend.mm  metal_tensor.mm  shaders.metal  tensor.mm  tokenizer.cpp  transformer_block.mm
tests/: test_activations.mm  test_attention.mm  test_causal_mask.mm  test_cpu_backend.mm  test_embedding.mm  test_gpt2_model.mm  test_gpt2_model_performance.mm  test_layernorm.mm  test_linear.mm  test_metal_backend.mm  test_tokenizer.cpp  test_transformer_block.mm
